--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>    <h1>
+    <main>    
+    <h1 id="titulo">
         Dicionario EBD
     </h1>
-    <section>
-        <button>Senteças</button>
-        <button>Doutrinas e Heresias</button>
-        <button>Quiz</button>
+    <section id="botoes">
+        
+        <button onclick="sentenca()">
+            Senteças
+        </button>
+        <button onclick="doutrina()">Doutrinas e Heresias</button>
+        <button onclick="quiz()">Quiz</button>
     </section>
-    <footer>DESENVOLVIDO POR GS-PRODUTOS DIGITAIS</footer>
-</main>
+    
+    </main>
+<footer>
+   <p> DESENVOLVIDO POR GS-PRODUTOS DIGITAIS </p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
